Testing interrogate configs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ ignore-module = true
 ignore-nested-functions = false
 ignore-nested-classes = true
 ignore-setters = false
-exclude = ["docs", "build", "tests"]
+exclude = ["mytardis_ingestion/tests", "mytardis_ingestion/docs", "build"]
 gnore-regex = ["^get$", "^mock_.*", ".*BaseClass.*", "^test$"]
 verbose = 2
 quiet = false
