--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = ["Chris Seal <c.seal@auckland.ac.nz>"]
 python = "^3.10"
 requests = "^2.27.1"
 backoff = "^1.11.1"
+PyYAML = "^6.0"
+python-decouple = "^3.6"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.1"
@@ -18,6 +20,8 @@ interrogate = "^1.5.0"
 mypy = "^0.931"
 types-requests = "^2.27.11"
 types-mock = "^4.0.11"
+PySnooper = "^1.1.0"
+responses = "^0.19.0"
 
 [tool.isort]
 profile = "black"
@@ -34,7 +38,7 @@ ignore-nested-functions = false
 ignore-nested-classes = true
 ignore-setters = false
 exclude = ["mytardis_ingestion/tests", "mytardis_ingestion/docs", "build"]
-gnore-regex = ["^get$", "^mock_.*", ".*BaseClass.*", "^test$"]
+ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*", "^test$"]
 verbose = 2
 quiet = false
 whitelist-regex = []
