--- a/templates/experiment.yaml
+++ b/templates/experiment.yaml
@@ -8,6 +8,8 @@ project_id: # Multiple projects can be associated with a sample. If this is the 
   - <one of the identifiers associated with the project that this experiment/sample is part of>
   - <one of the identifiers associated with the project that this experiment/sample is part of>
 experiment_id: <an identifier, unique within the project, that is associated with the sample>
+alternate_ids:
+  - <a list of alternative identifiers that are used for this object>
 description: <value>
 # schema: <value> - un-comment if multiple schema have been defined and set the appropriate type of schema
 #
