--- a/templates/project.yaml
+++ b/templates/project.yaml
@@ -4,6 +4,8 @@
 # Necessary info
 project_name: <value>
 project_id: <the identifier you wish to associate with the project - prepend with PGG- >
+alternate_ids:
+  - <a list of alternative identifiers that are used for this object>
 description: <value>
 lead_researcher: <value>
 # schema: <value> - un-comment if multiple schema have been defined and set the appropriate type of schema
