--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,7 +28,10 @@ repos:
     rev: v0.931
     hooks:
     -   id: mypy
-        additional_dependencies: [types-requests]
+        additional_dependencies:
+          - types-requests
+          - types-PyYAML
+          - types-mock
 -   repo: https://github.com/Lucas-C/pre-commit-hooks-bandit
     rev: v1.0.5
     hooks:
