--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requests = "^2.27.1"
 backoff = "^1.11.1"
 PyYAML = "^6.0"
 python-decouple = "^3.6"
+types-PyYAML = "^6.0.6"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.1"
@@ -22,6 +23,8 @@ types-requests = "^2.27.11"
 types-mock = "^4.0.11"
 PySnooper = "^1.1.0"
 responses = "^0.19.0"
+pre-commit = "^2.18.1"
+bandit = "^1.7.4"
 
 [tool.isort]
 profile = "black"
@@ -49,10 +52,19 @@ fail-under = 50
 
 [tool.mypy]
 mypy_path = [
-	  '^src$',
-	  '^tests$'
+	  "^src$"
 	  ]
 ignore_missing_imports = true
+exclude = [
+       "^tests/.*$",
+       "^docs/.*$",
+       ]
+
+[tool.bandit]
+exclude_dirs = [
+       	     "tests",
+       	     "docs",
+       	     ]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
