--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,6 +16,7 @@ repos:
     rev: v2.12.2
     hooks:
     -   id: pylint
+        stages: [commit]
         name: pylint
         entry: pylint
         language: system
@@ -42,12 +43,37 @@ repos:
     hooks:
     -   id: pytest
         name: pytest
-        stages: [commit]
+        stages: [commit, push]
         language: system
-        entry: pytest -v --showlocals
+        entry: pytest -v --showlocals --junitxml=pytest.xml
         types: [python]
         pass_filenames: false
+    -   id: generate pytest badge
+        name: pytest_badge
+        stages: [push]
+        language: system
+        entry: genbadge tests -i ./pytest.xml
+    -   id: coverage
+        name: coverage
+        stages: [push]
+        language: system
+        entry: overage run -m pytest tests
+        types: [python]
+        pass_filenames: false
+    -   id: Generate coverage XML
+        name: coverage_xml
+        stages: [push]
+        language: system
+        entry: coverage xml
+        types: [python]
+        pass_filenames: false
+    -   id: generate coverage badge
+        name: coverage_badge
+        stages: [push]
+        language: system
+        entry: genbadge coverage -i ./coverage.xml
 -   repo: https://github.com/Lucas-C/pre-commit-hooks-safety
     rev: v1.2.2
     hooks:
     -   id: python-safety-dependencies-check
+
