--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ pre-commit = "^2.18.1"
 bandit = "^1.7.4"
 coverage = "^6.3.2"
 pytest-cov = "^3.0.0"
+genbadge = {extras = ["tests", "coverage"], version = "^1.0.6"}
 
 [tool.isort]
 profile = "black"
