--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -45,14 +45,15 @@ repos:
         name: pytest
         stages: [commit, push]
         language: system
-        entry: pytest -v --showlocals --junitxml=./reports/junit/junit.xml
+        entry: pytest -v --showlocals --junitxml=./pytest.xml
         types: [python]
         pass_filenames: false
     -   id: generate pytest badge
         name: pytest_badge
         stages: [push]
         language: system
-        entry: genbadge tests
+        entry: genbadge tests --input-file=./pytest.xml
+        pass_filenames: false
     -   id: coverage
         name: coverage
         stages: [push]
@@ -64,14 +65,15 @@ repos:
         name: coverage_xml
         stages: [push]
         language: system
-        entry: coverage xml -o ./reports/coverage/coverage.xml
+        entry: coverage xml
         types: [python]
         pass_filenames: false
     -   id: generate coverage badge
         name: coverage_badge
         stages: [push]
         language: system
-        entry: genbadge coverage
+        entry: genbadge coverage --input-file=./coverage.xml
+        pass_filenames: false
 -   repo: https://github.com/Lucas-C/pre-commit-hooks-safety
     rev: v1.2.2
     hooks:
