--- a/.github/workflows/mytardis_ingestion.yml
+++ b/.github/workflows/mytardis_ingestion.yml
@@ -25,6 +25,12 @@ jobs:
 
     - name: Run pytest
       run: PYTHONPATH=src/ poetry run python -m pytest -v --cov=src/ tests/
+      
+    - name: Run Coverage
+      run: PYTHONPATH=src/ poetry run python -m coverage report -m;
+
+    - name: Generate XML Report
+      run: PYTHONPATH=src/ poetry run python -m coverage xml
 
     - name: Upload Coverage to Codecov
       uses: codecov/codecov-action@v1
