--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -45,7 +45,7 @@ repos:
         name: pytest
         stages: [commit]
         language: system
-        entry: pytest -v --showlocals
+        entry: pytest -v --cov=src/ tests/
         types: [python]
         pass_filenames: false
 -   repo: https://github.com/Lucas-C/pre-commit-hooks-safety
