--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,14 +44,12 @@ ignore-module = true
 ignore-nested-functions = false
 ignore-nested-classes = true
 ignore-setters = false
-exclude = ["mytardis_ingestion/tests", "mytardis_ingestion/docs", "build"]
+exclude = ["tests", "docs", "build"]
 ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*", "^test$"]
 verbose = 2
 quiet = false
 whitelist-regex = []
 color = true
-generate-badge = "."
-badge-format = "svg"
 fail-under = 50
 
 [tool.mypy]
