--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,10 +25,10 @@ PySnooper = "^1.1.0"
 responses = "^0.19.0"
 pre-commit = "^2.18.1"
 bandit = "^1.7.4"
-coverage = "^6.3.2"
 pytest-cov = "^3.0.0"
 genbadge = {extras = ["tests", "coverage"], version = "^1.0.6"}
 click = "8.0.4"
+coverage = {extras = ["toml"], version = "^6.3.2"}
 
 [tool.isort]
 profile = "black"
@@ -67,6 +67,14 @@ exclude_dirs = [
        	     "tests",
        	     "docs",
        	     ]
+
+[tool.coverage.run]
+omit = [
+     "tests/*",
+     "docs/*",
+     "src/specific_implementations/*",
+     "src/helpers/*"
+     ]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
