--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,8 +19,7 @@ repos:
         stages: [commit]
         name: pylint
         entry: pylint
-        language: system
-        types: [python]
+        language: python
 -   repo: https://github.com/econchick/interrogate
     rev: 1.5.0
     hooks:
@@ -45,7 +44,13 @@ repos:
     -   id: pytest
         name: pytest
         stages: [commit]
-        language: system
+        language: python
+        additional_dependencies:
+          - pytest
+          - responses
+          - mock
+          - backoff
+          - PyYAML
         entry: pytest -v
         types: [python]
         pass_filenames: false
