--- a/tests/test_yaml_smelter/test_experiment.yaml
+++ b/tests/test_yaml_smelter/test_experiment.yaml
@@ -2,49 +2,18 @@
 # Experiment/Sample template. Please replace <key> with the metadata keys defined in the schema and <value> with its value
 #
 # Necessary info
-experiment_name: <value>
-project_id: # Multiple projects can be associated with a sample. If this is the case, then the identifier NEEDS to be unique in all projects
-  - # If a rigorous directory structure is used then this can be inferred from the directory and only needs explicit definition if multiple projects are used for the sample
-  - <one of the identifiers associated with the project that this experiment/sample is part of>
-  - <one of the identifiers associated with the project that this experiment/sample is part of>
-experiment_id: <an identifier, unique within the project, that is associated with the sample>
+experiment_name: Test Experiment
+project_id:
+  - Project_1
+  - Test_Project
+experiment_id: Experiment_1
 alternate_ids:
-  - <a list of alternative identifiers that are used for this object>
-description: <value>
-# schema: <value> - un-comment if multiple schema have been defined and set the appropriate type of schema
-#
-# Access control. Access, unless specified otherwise, cascades from the projects associated with the experiment.
-# If different access controls are needed, they need to be explicitly defined.
-# To do so, uncomment the relevant section and fill it out.
-# Groups are preferred over individual users for the purposes of admin
-#
-#admin_groups:
-#  - <value>
-#  - <value> # Add new rows prepended with - as needed, or remove as needed
-#admin_users:
-#  - <value>
-#  - <value>
-#read_groups:
-#  - <value>
-#  - <value>
-#read_users:
-#  - <value>
-#  - <value>
-#download_groups:
-#  - <value>
-#  - <value>
-#download_users:
-#  - <value>
-#  - <value>
-#sensitive_groups:
-#  - <value>
-#  - <value>
-#sensitive_users:
-#  - <value>
-#  - <value>
+  - Test_Experiment
+  - Experiment_Test_1
+description: A test experiment for the purposes of testing
 #
 # General metadata
 #
 metadata:
-  <key>: <value>
-  <key>: <value>
+  My Test Key 1: Test Value
+  My Test Key 2: Test Value 2
