--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,6 +20,8 @@ repos:
         name: pylint
         entry: pylint
         language: python
+        additional_dependencies:
+          - PyYAML
 -   repo: https://github.com/econchick/interrogate
     rev: 1.5.0
     hooks:
