--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,6 +22,8 @@ repos:
         language: python
         additional_dependencies:
           - PyYAML
+          - backoff
+          - requests
 -   repo: https://github.com/econchick/interrogate
     rev: 1.5.0
     hooks:
