Revert "Merge pull request #31 from UoA-eResearch/19-catch-exceptions-when-parent-objects-not-found-during-ingestion-factory-class-refactor"
This reverts commit fd0f109200fd32277e2cbfe4a49eacd17fbd1c33, reversing
changes made to e88bfd0b5ed921f97d81862297c1e980ac2d8e21.

--- a/.pylintrc
+++ b/.pylintrc
@@ -86,8 +86,7 @@ disable=raw-checker-failed,
         suppressed-message,
         useless-suppression,
         deprecated-pragma,
-        use-symbolic-message-instead,
-	duplicate-code
+        use-symbolic-message-instead
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
@@ -494,7 +493,7 @@ ignored-parents=
 max-args=10
 
 # Maximum number of attributes for a class (see R0902).
-max-attributes=15
+max-attributes=10
 
 # Maximum number of boolean expressions in an if statement (see R0916).
 max-bool-expr=5
