Commit with final codebase but broken tests and needs debugging

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ pytest-cov = "^3.0.0"
 genbadge = {extras = ["tests", "coverage"], version = "^1.0.6"}
 click = "8.0.4"
 coverage = {extras = ["toml"], version = "^6.3.2"}
+pyright = "^1.1.254"
 
 [tool.isort]
 profile = "black"
