--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ backoff = "^1.11.1"
 PyYAML = "^6.0"
 python-decouple = "^3.6"
 types-PyYAML = "^6.0.6"
+pydantic = "^1.9.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.1"
