--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 Core/Legacy stuff to keep/
 
 Core/helpers/.#raid.py
@@ -31,7 +30,7 @@ __pycache__/
 
 Print_group_ingestion.py
 
-src/specific_implementations/print.py
+src/specific_implementations/*
 
 *.yml#
 
