--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,61 +5,60 @@ repos:
     hooks:
     -   id: isort
 -   repo: https://github.com/psf/black
-    rev: 22.3.0
+    rev: 22.6.0
     hooks:
     -   id: black
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.2.0
+    rev: v4.3.0
     hooks:
     -   id: trailing-whitespace
 -   repo: https://github.com/PyCQA/pylint
-    rev: v2.13.7
+    rev: v2.14.5
     hooks:
-    -   id: pylint
-        stages: [commit]
-        name: pylint
-        entry: pylint
-        language: python
-        additional_dependencies:
-          - PyYAML
-          - backoff
-          - requests
--   repo: https://github.com/econchick/interrogate
-    rev: 1.5.0
-    hooks:
-    -   id: interrogate
-        args: [src]
+    - id: pylint
+      stages: [commit]
+      name: pylint
+      entry: pylint
+      language: python
+      args: [src]
+      additional_dependencies:
+        - PyYAML
+        - backoff
+        - requests
+        - pydantic
 -   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.942
+    rev: v0.971
     hooks:
-    -   id: mypy
-        stages: [commit]
-        additional_dependencies:
-          - types-requests
-          - types-PyYAML
-          - types-mock
-        exclude: tests, docs
+    - id: mypy
+      stages: [commit]
+      additional_dependencies:
+        - types-requests
+        - types-PyYAML
+        - types-mock
+        - pydantic
+      exclude: tests, docs
 -   repo: https://github.com/Lucas-C/pre-commit-hooks-bandit
     rev: v1.0.6
     hooks:
-    -   id: python-bandit-vulnerability-check
+    - id: python-bandit-vulnerability-check
 -   repo: local
     hooks:
-    -   id: pytest
-        name: pytest
-        stages: [commit]
-        language: python
-        additional_dependencies:
-          - pytest
-          - responses
-          - mock
-          - backoff
-          - PyYAML
-        entry: pytest -v
-        types: [python]
-        pass_filenames: false
+    - id: pytest
+      name: pytest
+      stages: [commit]
+      language: python
+      additional_dependencies:
+        - pytest
+        - responses
+        - mock
+        - backoff
+        - PyYAML
+        - pydantic
+        - devtools
+      entry: pytest -v src
+      types: [python]
+      pass_filenames: false
 -   repo: https://github.com/Lucas-C/pre-commit-hooks-safety
-    rev: v1.2.4
+    rev: v1.3.0
     hooks:
     -   id: python-safety-dependencies-check
-
