--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,9 @@ bandit = "^1.7.4"
 pytest-cov = "^4.0.0"
 genbadge = {extras = ["tests", "coverage"], version = "^1.0.6"}
 click = "8.1.3"
-coverage = {extras = ["toml"], version = "^7.1.0"}
+coverage = {extras = ["toml"], version = "^6.3.2"}
+pyright = "^1.1.254"
+devtools = "^0.8.0"
 
 [tool.isort]
 profile = "black"
