--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ pytest-cov = "^3.0.0"
 genbadge = {extras = ["tests", "coverage"], version = "^1.0.6"}
 click = "8.1.3"
 coverage = {extras = ["toml"], version = "^6.3.2"}
+pyright = "^1.1.254"
 
 [tool.isort]
 profile = "black"
