--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,10 @@ python = "^3.10"
 requests = "^2.28.2"
 backoff = "^2.2.1"
 PyYAML = "^6.0"
-python-decouple = "^3.7"
-types-PyYAML = "^6.0.12"
-pydantic = "^1.10.4"
+python-decouple = "^3.6"
+types-PyYAML = "^6.0.11"
+pydantic = "^1.9.1"
+python-dateutil = "^2.8.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.1"
