--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python-decouple = "^3.6"
 types-PyYAML = "^6.0.11"
 pydantic = "^1.9.1"
 python-dateutil = "^2.8.2"
+pytz = "^2022.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.1"
