--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ PyYAML = "^6.0"
 python-decouple = "^3.6"
 types-PyYAML = "^6.0.11"
 pydantic = "^1.10.2"
+pytz = "^2022.2.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
