--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,9 @@ backoff = "^2.2.1"
 PyYAML = "^6.0"
 python-decouple = "^3.6"
 types-PyYAML = "^6.0.11"
-pydantic = "^1.10.2"
+pydantic = {extras = ["dotenv"], version = "^1.10.2"}
 pytz = "^2022.2.1"
+python-dateutil = "^2.8.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.1"
