--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,3 +85,6 @@ omit = [
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+markers = ["long: marks tests as long running (deselect with '-m \"not long\"')"]
