--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ types-PyYAML = "^6.0.11"
 pydantic = {extras = ["dotenv"], version = "^1.10.2"}
 pytz = "^2022.2.1"
 python-dateutil = "^2.8.2"
+sphinx = "^6.1.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.1"
