--- a/templates/datafile.yaml
+++ b/templates/datafile.yaml
@@ -9,7 +9,7 @@
 # Necessary info
 datafiles:
   # If a rigorous directory structure is used then this can be inferred from the directory and only needs explicit definition if multiple samples are associated with the dataset
-  dataset_id: <the identifier associated with the dataset that this file is part of>
+  dataset_id: <One of the identifiers associated with the dataset that this file is part of>
   # schema: <value> - un-comment if multiple schema have been defined and set the appropriate type of schema
   files:
     - name: <file_name>
