--- a/templates/dataset.yaml
+++ b/templates/dataset.yaml
@@ -7,8 +7,10 @@ experiment_id: # Multiple samples can be associated with a dataset. If this is t
   - # If a rigorous directory structure is used then this can be inferred from the directory and only needs explicit definition if multiple samples are associated with the dataset
   - <one of the identifiers associated with the experiment/sample that this dataset is part of>
   - <one of the identifiers associated with the experiment/sample that this dataset is part of>
-dataset_id: <an identifier, unique within the experiment/sample, that is associated with the dataset>
-instrument_id: <the identifier associated with the instrument (or commercial entity if outsourced) used to generate the dataset>
+dataset_ids: 
+  - <a list of identifiers that are used for this object>
+  - <a list of identifiers that are used for this object>
+instrument_id: <one of the identifiers associated with the instrument (or commercial entity if outsourced) used to generate the dataset>
 # schema: <value> - un-comment if multiple schema have been defined and set the appropriate type of schema
 #
 # Access control. Access, unless specified otherwise, cascades from the experiments associated with the dataset.
