--- a/templates/project.yaml
+++ b/templates/project.yaml
@@ -3,9 +3,9 @@
 #
 # Necessary info
 project_name: <value>
-project_id: <the identifier you wish to associate with the project - prepend with PGG- >
-alternate_ids:
-  - <a list of alternative identifiers that are used for this object>
+project_ids:
+  - <a list of identifiers that are used for this object>
+  - <a list of identifiers that are used for this object>
 description: <value>
 lead_researcher: <value>
 # schema: <value> - un-comment if multiple schema have been defined and set the appropriate type of schema
@@ -13,30 +13,7 @@ lead_researcher: <value>
 # Access control. Please remove or comment out un-necessary types of group/users
 # Groups are preferred over individual users for the purposes of admin
 #
-admin_groups:
-  - <value>
-  - <value> # Add new rows prepended with - as needed, or remove as needed
-admin_users:
-  - <value>
-  - <value>
-read_groups:
-  - <value>
-  - <value>
-read_users:
-  - <value>
-  - <value>
-download_groups:
-  - <value>
-  - <value>
-download_users:
-  - <value>
-  - <value>
-sensitive_groups:
-  - <value>
-  - <value>
-sensitive_users:
-  - <value>
-  - <value>
+# TODO Update the ACL model
 #
 # General metadata
 #
