--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,7 @@ repos:
     hooks:
     -   id: isort
 -   repo: https://github.com/psf/black
-    rev: 23.1.0
+    rev: 23.3.0
     hooks:
     -   id: black
 -   repo: https://github.com/pre-commit/pre-commit-hooks
@@ -13,7 +13,7 @@ repos:
     hooks:
     -   id: trailing-whitespace
 -   repo: https://github.com/PyCQA/pylint
-    rev: v2.16.2
+    rev: v3.0.0a6
     hooks:
     - id: pylint
       stages: [commit]
@@ -27,7 +27,7 @@ repos:
         - requests
         - pydantic
 -   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.0.1
+    rev: v1.2.0
     hooks:
     - id: mypy
       stages: [commit]
