--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pydantic = {extras = ["dotenv"], version = "^1.10.2"}
 pytz = "^2022.2.1"
 python-dateutil = "^2.8.2"
 types-pytz = "^2023.3.0.0"
+types-python-dateutil = "^2.8.19.12"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.1"
@@ -75,6 +76,7 @@ exclude_dirs = [
        	     "tests",
        	     "docs",
        	     ]
+skips = ['B101']
 
 [tool.coverage.run]
 omit = [
