--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "python.testing.pytestArgs": [
-        "tests"
+        "tests",
+        "-vv",
+        "-n 5"
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
