--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ sphinx = "^7.0.0"
 wily = "^1.24.0"
 pytest-xdist = "^3.2.1"
 types-python-slugify = "^8.0.0.2"
+pytest-mock = "^3.10.0"
 
 [tool.isort]
 profile = "black"
