--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ python-dateutil = "^2.8.2"
 types-pytz = "^2023.3.0.0"
 types-python-dateutil = "^2.8.19.13"
 python-slugify = "^8.0.1"
+dependency-injector = "^4.41.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.3.1"
