--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,13 +11,14 @@ backoff = "^2.2.1"
 PyYAML = "^6.0"
 python-decouple = "^3.8"
 types-PyYAML = "^6.0.12"
-pydantic = {extras = ["dotenv"], version = "^1.10.9"}
+pydantic = "^2.0.3"
 pytz = "^2023.3"
 python-dateutil = "^2.8.2"
 types-pytz = "^2023.3.0.0"
 types-python-dateutil = "^2.8.19.13"
 python-slugify = "^8.0.1"
 dependency-injector = "^4.41.0"
+pydantic-settings = "^2.0.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.3.2"
