--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ types-python-dateutil = "^2.8.19.13"
 python-slugify = "^8.0.1"
 dependency-injector = "^4.41.0"
 pydantic-settings = "^2.0.2"
+validators = "^0.20.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.3.2"
