--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,7 @@ repos:
     hooks:
     -   id: isort
 -   repo: https://github.com/psf/black
-    rev: 23.3.0
+    rev: 23.7.0
     hooks:
     -   id: black
 -   repo: https://github.com/pre-commit/pre-commit-hooks
@@ -13,7 +13,7 @@ repos:
     hooks:
     -   id: trailing-whitespace
 -   repo: https://github.com/PyCQA/pylint
-    rev: v3.0.0a6
+    rev: v3.0.0a7
     hooks:
     - id: pylint
       stages: [commit]
@@ -27,7 +27,7 @@ repos:
         - requests
         - pydantic
 -   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.2.0
+    rev: v1.5.1
     hooks:
     - id: mypy
       stages: [commit]
@@ -41,11 +41,12 @@ repos:
     rev: v1.0.6
     hooks:
     - id: python-bandit-vulnerability-check
+      stages: [pre-push]
 -   repo: local
     hooks:
     - id: pytest
       name: pytest
-      stages: [commit]
+      stages: [pre-push]
       language: python
       additional_dependencies:
         - pytest
@@ -59,12 +60,13 @@ repos:
       types: [python]
       pass_filenames: false
 -   repo: https://github.com/Lucas-C/pre-commit-hooks-safety
-    rev: v1.3.1
+    rev: v1.3.2
     hooks:
     -   id: python-safety-dependencies-check
 -   repo: local
     hooks:
      -   id: wily
+         stages: [pre-push]
          name: wily
          entry: wily diff
          verbose: true
