Make the bandit security checks a pre-push step instead of pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,6 +41,7 @@ repos:
     rev: v1.0.6
     hooks:
     - id: python-bandit-vulnerability-check
+      stages: [pre-push]
 -   repo: local
     hooks:
     - id: pytest
