--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,10 +37,11 @@ repos:
         - types-mock
         - pydantic
       exclude: tests, docs
--   repo: https://github.com/Lucas-C/pre-commit-hooks-bandit
+-   repo: https://github.com/PyCQA/bandit
     rev: v1.0.6
     hooks:
-    - id: python-bandit-vulnerability-check
+    - id: bandit
+      args: ["-r", "src"]
       stages: [pre-push]
 -   repo: local
     hooks:
