--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,7 +38,7 @@ repos:
         - pydantic
       exclude: tests, docs
 -   repo: https://github.com/PyCQA/bandit
-    rev: v1.0.6
+    rev: 1.7.5
     hooks:
     - id: bandit
       args: ["-r", "src"]
