--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ python-slugify = "^8.0.1"
 dependency-injector = "^4.41.0"
 pydantic-settings = "^2.0.2"
 validators = "^0.20.0"
+bandit = "^1.7.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.4.0"
