--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -43,7 +43,7 @@ repos:
     - id: bandit
       args: ["-r", "src/"]
       stages: [pre-push]
-      exclude: tests, docs
+      exclude: ^tests, ^docs
 -   repo: local
     hooks:
     - id: pytest
