--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,9 +41,8 @@ repos:
     rev: 1.7.5
     hooks:
     - id: bandit
-      args: ["-r", "src/"]
+      args: ["-r", "src/", "-x", "*/tests/*"]
       stages: [pre-push]
-      exclude: ^tests, ^docs
 -   repo: local
     hooks:
     - id: pytest
