getting the pre-commit to work

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -60,6 +60,7 @@ repos:
         - PyYAML
         - pydantic
         - devtools
+        - pydantic-settings
       entry: pytest -v tests
       types: [python]
       pass_filenames: false
