getting the pre-commit to work

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -61,6 +61,7 @@ repos:
         - pydantic
         - devtools
         - pydantic-settings
+        - validators
       entry: pytest -v tests
       types: [python]
       pass_filenames: false
