getting the pre-commit to work

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -62,6 +62,7 @@ repos:
         - devtools
         - pydantic-settings
         - validators
+        - pytz
       entry: pytest -v tests
       types: [python]
       pass_filenames: false
