getting the pre-commit to work

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -64,6 +64,7 @@ repos:
         - validators
         - pytz
         - python-slugify
+        - python-dateutil
       entry: pytest -v tests
       types: [python]
       pass_filenames: false
