--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,8 @@ coverage = {extras = ["toml"], version = "^7.3.1"}
 pyright = "^1.1.326"
 devtools = "^0.12.2"
 sphinx = "^7.2.5"
+flake8-bandit = "^4.1.1"
+flake8-pyproject = "^1.2.3"
 
 [tool.isort]
 profile = "black"
@@ -80,12 +82,9 @@ exclude = [
 plugins = ["pydantic.mypy"]
 strict = true
 
-[tool.bandit]
-exclude_dirs = [
-       	     "tests",
-       	     "docs",
-       	     ]
-skips = ['B101']
+[tool.flake8]
+max-line-length = 88
+extend-ignore = "E203"
 
 [tool.coverage.run]
 omit = [
