More bandit errors

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -45,6 +45,8 @@ repos:
       args:
        - configfile
        - pyproject.toml
+      additional_dependencies:
+        - "toml"
 -   repo: local
     hooks:
     - id: pytest
