--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ devtools = "^0.12.2"
 sphinx = "^7.2.5"
 flake8-bandit = "^4.1.1"
 flake8-pyproject = "^1.2.3"
+toml = "^0.10.2"
 
 [tool.isort]
 profile = "black"
