--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,7 +13,7 @@ repos:
     hooks:
     -   id: trailing-whitespace
 -   repo: https://github.com/PyCQA/pylint
-    rev: v3.0.0a7
+    rev: v2.17.5
     hooks:
     - id: pylint
       stages: [commit]
