--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,9 @@
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
-    "python.radon.executable": "/Users/csea004/.virtualenvs/mytardis-ingestion-SuS0QS-b-py3.11/bin/radon"
+    "python.radon.executable": "/Users/csea004/.virtualenvs/mytardis-ingestion-SuS0QS-b-py3.11/bin/radon",
+    "cSpell.words": [
+        "ltro",
+        "lukas"
+    ]
 }
