--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Chris Seal <c.seal@auckland.ac.nz>"]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.12"
 requests = "^2.31.0"
 backoff = "^2.2.1"
 PyYAML = "^6.0"
@@ -48,6 +48,7 @@ sphinx = "^7.2.5"
 flake8-bandit = "^4.1.1"
 flake8-pyproject = "^1.2.3"
 toml = "^0.10.2"
+pyproject-pre-commit = "^0.0.26"
 
 [tool.isort]
 profile = "black"
@@ -72,8 +73,8 @@ color = true
 fail-under = 50
 
 [tool.mypy]
-mypy_path = [
-	  "^src$"
+files = [
+       "src/**/*.py"
 	  ]
 ignore_missing_imports = true
 exclude = [
