Update example script to reflect changes in the forge interface.
The forge functions no longer have a return value for parameter URIs (as the forge doesn't get these from MyTardis).

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -90,7 +90,7 @@ max-line-length = 88
 extend-ignore = "E203"
 
 [tool.bandit.assert_used]
-skips = ["tests/*", "test_*.py"]
+skips = ["tests/*", "test_*.py", "upload_to_mytardis.py"]
 
 
 [tool.coverage.run]
