Try running pylint as part of the PR checks

--- a/.github/workflows/mytardis_ingestion.yml
+++ b/.github/workflows/mytardis_ingestion.yml
@@ -44,3 +44,6 @@ jobs:
       uses: codecov/codecov-action@v1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
+
+    - name: Run pylint
+      run: PYTHONPATH=src/ poetry run python -m pylint src/ --rcfile .pylintrc
