Update linting exclusions to reflect new samples directory

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,7 @@ ignore-module = true
 ignore-nested-functions = false
 ignore-nested-classes = true
 ignore-setters = false
-exclude = ["tests", "docs", "build"]
+exclude = ["tests", "docs", "build", "samples"]
 ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*", "^test$"]
 verbose = 2
 quiet = false
@@ -90,7 +90,7 @@ max-line-length = 88
 extend-ignore = "E203"
 
 [tool.bandit.assert_used]
-skips = ["tests/*", "test_*.py", "upload_to_mytardis.py"]
+skips = ["tests/*", "test_*.py", "samples/*"]
 
 
 [tool.coverage.run]
