Run mypy as part of the pull request checks in GitHub

--- a/.github/workflows/mytardis_ingestion.yml
+++ b/.github/workflows/mytardis_ingestion.yml
@@ -47,3 +47,7 @@ jobs:
 
     - name: Run pylint
       run: PYTHONPATH=src/ poetry run python -m pylint src/ --rcfile .pylintrc
+
+    - name: Run mypy
+      # Takes configuration from pyproject.toml
+      run: PYTHONPATH=src/ poetry run python -m mypy
