Run Black format checking as part of PR checks

--- a/.github/workflows/mytardis_ingestion.yml
+++ b/.github/workflows/mytardis_ingestion.yml
@@ -51,3 +51,6 @@ jobs:
     - name: Run mypy
       # Takes configuration from pyproject.toml
       run: PYTHONPATH=src/ poetry run python -m mypy
+
+    - name: Formatting - check with Black
+      run: PYTHONPATH=src/ poetry run python -m black --check --diff src
