Run isort in the PR checks

--- a/.github/workflows/mytardis_ingestion.yml
+++ b/.github/workflows/mytardis_ingestion.yml
@@ -52,5 +52,8 @@ jobs:
       # Takes configuration from pyproject.toml
       run: PYTHONPATH=src/ poetry run python -m mypy
 
-    - name: Formatting - check with Black
+    - name: Check import formatting with isort
+      run: PYTHONPATH=src/ poetry run python -m python -m isort --check --diff --profile black src
+
+    - name: Check code formatting with Black
       run: PYTHONPATH=src/ poetry run python -m black --check --diff src
