clean branch ro_crate parser

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,6 +21,8 @@ repos:
       language: python
       args: [src]
       additional_dependencies:
+        - typer
+        - rocrate
         - PyYAML
         - backoff
         - requests
